[package]
name = "push-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
prost.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
p256.workspace = true
rand.workspace = true
hkdf.workspace = true
aes-gcm.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true
uuid.workspace = true
bytes.workspace = true
serde_json.workspace = true
futures-util.workspace = true
sha2.workspace = true

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.0"
