[package]
name = "push-receiver"
version = "0.2.5"
edition = "2024"
description = "FCM push receiver for Rust+"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nodirust/nodirust"
keywords = ["fcm", "push", "receiver"]
categories = ["network-programming"]

[lints]
workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
prost.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
p256.workspace = true
rand.workspace = true
hkdf.workspace = true
aes-gcm.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true
uuid.workspace = true
bytes.workspace = true
serde_json.workspace = true
futures-util.workspace = true
sha2.workspace = true
serde_urlencoded = "0.7.1"

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.0"
